# linux-whisperer

./: linux-whisperer.desktop  linux-whisperer.service  main.py  pyproject.toml
whisperkey/: __init__.py  config.py  file_handler.py  main.py  settings.py
