[tool.poetry]
name = "linux-whisperer"
version = "0.1.0"
description = "Linux whisperer"
authors = ["Daniel <danielratmiroff@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pynput = "1.7.8"
pyaudio = "^0.2.14"
psutil = "^7.0.0"
openai = "^1.66.2"
pyperclip = "^1.9.0"
notify2 = "^0.3.1"
dbus-python = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
